{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 7,
  "lineage": "e5882b8b-f36e-6d7a-5003-06738b637bc5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "db_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043309320500:internet-gateway/igw-05e902c3af3bd369d",
            "id": "igw-05e902c3af3bd369d",
            "owner_id": "043309320500",
            "tags": {
              "Name": "dbserver"
            },
            "tags_all": {
              "Name": "dbserver"
            },
            "vpc_id": "vpc-00bb9792721e2d090"
          },
          "dependencies": [
            "aws_vpc.db_server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dbroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043309320500:route-table/rtb-06126218a6648953b",
            "id": "rtb-06126218a6648953b",
            "owner_id": "043309320500",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05e902c3af3bd369d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dbserver"
            },
            "tags_all": {
              "Name": "dbserver"
            },
            "timeouts": null,
            "vpc_id": "vpc-00bb9792721e2d090"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.db_igw",
            "aws_vpc.db_server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db_server_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab542b7b700dbe71",
            "route_table_id": "rtb-06126218a6648953b",
            "subnet_id": "subnet-0cc2279c78aac1d3b"
          },
          "dependencies": [
            "aws_internet_gateway.db_igw",
            "aws_route_table.dbroute",
            "aws_subnet.db_server_subnet",
            "aws_vpc.db_server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043309320500:security-group/sg-06ccebd21faa67a47",
            "description": "Allow TLS inbound traffic",
            "egress": [],
            "id": "sg-06ccebd21faa67a47",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "db-sg",
            "name_prefix": "",
            "owner_id": "043309320500",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db_allow_tls"
            },
            "tags_all": {
              "Name": "db_allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-00bb9792721e2d090"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.db_server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_server_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043309320500:subnet/subnet-0cc2279c78aac1d3b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "13.0.0.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cc2279c78aac1d3b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "043309320500",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dbserver"
            },
            "tags_all": {
              "Name": "dbserver"
            },
            "vpc_id": "vpc-00bb9792721e2d090"
          },
          "dependencies": [
            "aws_vpc.db_server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "db_server_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043309320500:vpc/vpc-00bb9792721e2d090",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "13.0.0.0/28",
            "default_network_acl_id": "acl-004cadeb8986c7727",
            "default_route_table_id": "rtb-09105d218e3b13d28",
            "default_security_group_id": "sg-0dfb875086a7df1ad",
            "dhcp_options_id": "dopt-01c0ee741b008262a",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00bb9792721e2d090",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09105d218e3b13d28",
            "owner_id": "043309320500"
          }
        }
      ]
    }
  ]
}